# analise_internacoes_hospital

./: .gitignore  pyproject.toml
dados/: altas_por_dia.csv  altas_por_mes.csv  internacoes_por_dia.csv  internacoes_por_mes.csv
relatorio_internacoes_2023/: conexao.py  consultas.py  visualizacao.py
